--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.15",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/node-loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@mui/joy": "^5.0.0-beta.12",
+    "@types/mdx": "^2.0.9",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
